README hot fix